crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__component_names__component_names_indexed_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map_component_names.rs
expression: segments
---
[
    "2:0 \"export f\" -> \"<Child :\"",
    "3:46 \"Child\\\")⏎\" -> \"Child :[\"",
]
